--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
             </div>
             <div class="text-center">
                 <div id="personal-highscore">
-                    🏆 Persönlicher Highscore: <span id="high-score">Laden...</span>
+                    🏆 Highscore: <span id="high-score">Laden...</span>
                 </div>
                 <div id="global-highscore">
-                    🌎 Welt Highscore: <span id="global-score">Laden...</span>
+                    🌎 Highscore: <span id="global-score">Laden...</span>
                 </div>
            <!-- <span>Höchste Runde: <span id="high-score">0</span></span><br>
                 <span>Weltrekord: <span id="global-score">0</span></span>
@@ -1104,6 +1104,7 @@ onSnapshot(globalRef, (snap) => {
 
 
 </html>
+
 
 
 
